# qt-uri-scheme-handler

./: CMakeLists.txt  README.md  hurischemehandler.cpp  hurischemehandler.h  main.cpp  widget.cpp
